--- a/package.json
+++ b/package.json
@@ -11,21 +11,22 @@
   "dependencies": {
     "@prisma/client": "^5.22.0",
     "@sendgrid/mail": "^8.1.6",
+    "autoprefixer": "^10.4.21",
     "exceljs": "^4.4.0",
     "iconv-lite": "^0.7.0",
     "lucide-react": "^0.263.1",
     "next": "^14.0.0",
     "pdf-lib": "^1.17.1",
     "pdfkit": "^0.14.0",
+    "postcss": "^8.5.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sharp": "^0.33.5",
-    "tailwindcss": "^3.4.18",
-    "postcss": "^8.5.6",
-    "autoprefixer": "^10.4.21"
+    "tailwindcss": "^3.4.18"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
+    "@types/pdfkit": "^0.17.3",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "prisma": "^5.22.0",
