--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "autoprefixer": "^10.4.21",
     "exceljs": "^4.4.0",
     "iconv-lite": "^0.7.0",
+    "jszip": "^3.10.1",
     "lucide-react": "^0.263.1",
     "next": "^14.0.0",
     "pdf-lib": "^1.17.1",
