--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@prisma/client": "^5.22.0",
     "@sendgrid/mail": "^8.1.6",
+    "@vercel/blob": "^2.0.0",
     "autoprefixer": "^10.4.21",
     "exceljs": "^4.4.0",
     "iconv-lite": "^0.7.0",
