--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@vercel/blob": "^2.0.0",
     "autoprefixer": "^10.4.21",
     "exceljs": "^4.4.0",
+    "gray-matter": "^4.0.3",
     "iconv-lite": "^0.7.0",
     "jszip": "^3.10.1",
     "lucide-react": "^0.263.1",
@@ -23,6 +24,8 @@
     "postcss": "^8.5.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "remark": "^15.0.1",
+    "remark-html": "^16.0.1",
     "sharp": "^0.33.5",
     "tailwindcss": "^3.4.18"
   },
